--- a/codebook_ICPC_24.tex
+++ b/codebook_ICPC_24.tex
@@ -181,9 +181,15 @@ b:線上整數點個數
 
 \section{資料結構}
 \subsection{離散化}
-\lstinputlisting{data_structure/discretization.cpp}
+\lstinputlisting{DSA/discretization.cpp}
 \subsection{線段樹}
-\lstinputlisting{data_structure/segment_tree.cpp}
+\lstinputlisting{DSA/segment_tree.cpp}
+\subsection{莫隊算法}
+\lstinputlisting{DSA/Mo's_algo.cpp}
+\subsection{CDQ分治}
+\lstinputlisting{DSA/CDQ.cpp}
+\subsection{可持久化線段樹}
+\lstinputlisting{DSA/persistent_segment_tree.cpp}
 
 \section{動態規劃}
 \subsection{0/1背包}
@@ -227,7 +233,8 @@ $O(NW\log{k})$
 \lstinputlisting{tree/lca.cpp}
 \subsection{換根DP}
 \lstinputlisting{tree/change_root.cpp}
-
+\subsection{樹哈希}
+\lstinputlisting{tree/tree_hash.cpp}
 
 \section{圖論}
 \subsection{最短路徑}
@@ -293,14 +300,14 @@ floyd-warshall $O({N}^3)$
 % \lstinputlisting{skill/Progama.cpp}
 \subsection{隨機數}
 \lstinputlisting{skill/Random.cpp}
-% \subsection{Linus指令}
-% \lstinputlisting{skill/Linus_cmd.cpp}
+\subsection{Linus指令}
+\lstinputlisting{skill/Linus_cmd.cpp}
 \subsection{Windows對拍}
 \lstinputlisting{skill/debugScript.cpp}
 
 
-\section{其他}
-\lstinputlisting{other/funny.cpp}
-\lstinputlisting{other/IwantAC.cpp}
+% \section{其他}
+% \lstinputlisting{other/funny.cpp}
+% \lstinputlisting{other/IwantAC.cpp}
 
 \end{document}
