--- a/codebook_ICPC_24.tex
+++ b/codebook_ICPC_24.tex
@@ -235,6 +235,10 @@ $O(NW\log{k})$
 \lstinputlisting{tree/change_root.cpp}
 \subsection{樹哈希}
 \lstinputlisting{tree/tree_hash.cpp}
+\subsection{重鏈剖分}
+\lstinputlisting{tree/Heavy_Link_cut.cpp}
+\subsection{虛樹}
+\lstinputlisting{tree/Virtual_Tree.cpp}
 
 \section{圖論}
 \subsection{最短路徑}
@@ -249,7 +253,8 @@ floyd-warshall $O({N}^3)$
 \lstinputlisting{graph/BCC.cpp}
 \subsection{強連通分量}
 \lstinputlisting{graph/SCC.cpp}
-
+\subsection{2-SAT}
+\lstinputlisting{graph/2-SAT.cpp}
 
 \section{字串}
 \subsection{KMP}
